--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- todo: Link CSS File -->
     <link
       rel="stylesheet"
-      href="/advanced-html-css-build&deploy-website/01-HTML-CSS-Basics-Build-a-Blog-Website/MyBlog/style.css"
+      href="style.css"
     />
     <title>My Blog</title>
   </head>
