--- a/Pages/about.html
+++ b/Pages/about.html
@@ -34,7 +34,7 @@
       <!-- TODO:  1047-Responsive About Page -->
       <section id="About">
         <img
-          src="/advanced-html-css-build&deploy-website/01-HTML-CSS-Basics-Build-a-Blog-Website/MyBlog/img/profileImg.jpg"
+          src="/img/profileImg.jpg"
           alt="my profile img"
           style="width: 400px"
         />
