Fixed image from about page

--- a/Pages/about.html
+++ b/Pages/about.html
@@ -34,7 +34,7 @@
       <!-- TODO:  1047-Responsive About Page -->
       <section id="About">
         <img
-          src="/img/profileImg.jpg"
+          src="../img/profileImg.jpg"
           alt="my profile img"
           style="width: 400px"
         />
