--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -22,12 +22,12 @@
       <nav id="mainNav">
         <ul>
           <!-- TODO: HTML Elements Classes and there CSS selection -->
-          <a href="../index.html"> <li class="nav-item active">Home</li> </a>
+          <a href="../index.html"> <li class="nav-item ">Home</li> </a>
 
           <a href="./blog.html"> <li class="nav-item">Blog</li> </a>
 
           <a href="./about.html"> <li class="nav-item">About</li> </a>
-          <a href="./contact.html"> <li class="nav-item">Contact</li></a>
+          <a href="./contact.html"> <li class="nav-item active">Contact</li></a>
         </ul>
       </nav>
       <h1>Contact</h1>
