--- a/Pages/blog.html
+++ b/Pages/blog.html
@@ -22,9 +22,9 @@
       <nav id="mainNav">
         <ul>
           <!--TODO: 1039-Navigate between web pages -->
-          <a href="../index.html"> <li class="nav-item active">Home</li> </a>
+          <a href="../index.html"> <li class="nav-item ">Home</li> </a>
 
-          <a href="./blog.html"> <li class="nav-item">Blog</li> </a>
+          <a href="./blog.html"> <li class="nav-item active">Blog</li> </a>
 
           <a href="./about.html"> <li class="nav-item">About</li> </a>
           <a href="./contact.html"> <li class="nav-item">Contact</li></a>
